# rsync-win

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: ci.yml  release.yml
crates/rsync-cli/: Cargo.toml  build.rs
crates/rsync-cli/benches/: remote_protocol.rs
crates/rsync-cli/src/: app.rs  batch.rs  cli.rs  daemon_server.rs  format.rs  lib.rs  main.rs  options.rs  output.rs
crates/rsync-cli/src/app/: tests.rs
crates/rsync-cli/src/app/tests/: chunk12.rs  core.rs  daemon.rs  local.rs  mod.rs  remote.rs  support.rs
crates/rsync-cli/src/daemon_server/: logging.rs  mod.rs  tests.rs
crates/rsync-cli/src/execute/: daemon_client.rs  local.rs  mod.rs  remote_shell.rs
crates/rsync-cli/src/format/: actions.rs  mod.rs  names.rs  report.rs
crates/rsync-cli/src/options/: values.rs
crates/rsync-cli/src/plan/: diagnostics.rs  filters.rs  limits.rs  metadata.rs  mod.rs  remote_args.rs
crates/rsync-cli/src/remote/: daemon_auth.rs  flist.rs  mod.rs  pull.rs  push.rs  receive.rs  security.rs  send.rs  session.rs
crates/rsync-cli/src/transfer/: checksum.rs  delta.rs  fs_ops.rs  limits.rs  mod.rs  progress.rs  sum_head.rs  tokens.rs
crates/rsync-core/: Cargo.toml
crates/rsync-core/src/: chmod.rs  lib.rs
crates/rsync-delta/: Cargo.toml
crates/rsync-delta/src/: apply.rs  lib.rs  matcher.rs  rollsum.rs  signature.rs
crates/rsync-filter/: Cargo.toml
crates/rsync-filter/src/: files_from.rs  lib.rs  matcher.rs  rule.rs
crates/rsync-fs/: Cargo.toml
crates/rsync-fs/benches/: local_sync.rs
crates/rsync-fs/src/: lib.rs  metadata.rs  sync.rs  walk.rs
crates/rsync-protocol/: Cargo.toml
crates/rsync-protocol/src/: daemon.rs  flist.rs  io.rs  lib.rs  session.rs  version.rs
crates/rsync-transport/: Cargo.toml
crates/rsync-transport/src/: bandwidth.rs  lib.rs  process.rs  remote_shell.rs  tcp.rs
crates/rsync-winfs/: Cargo.toml
crates/rsync-winfs/src/: drive.rs  lib.rs  links.rs  metadata.rs  path.rs  security.rs  sidecar.rs  streams.rs  vss.rs
docs/: COMPATIBILITY.md  DEVELOPMENT-GUIDE.md  OPTION-STATUS.md  RELEASE-NOTES-TEMPLATE.md  ROADMAP.md  VSS-DESIGN.md
docs/superpowers/plans/: 2026-04-25-native-windows-rsync.md  2026-04-25-phase5-execution-options.md  2026-04-25-phase5-remote-checksum-metadata-links-append.md  2026-04-25-phase5-remote-filter-files-from.md  2026-04-25-protocol31-remote-shell.md  2026-04-28-next-development-plan.md  2026-04-28-phase6-daemon-client.md  2026-04-28-phase7-8-metadata.md  2026-04-28-phase9-hardening.md  2026-04-29-full-rsync-option-support.md  2026-05-01-production-readiness.md  2026-05-12-rsync-cli-refactor-completion.md  2026-05-17-rsync-win-next-version-development.md  2026-05-17-rsync-win-release-grade-development.md
docs/superpowers/specs/: 2026-05-04-rsync-cli-lib-refactor-design.md
scripts/: package-release.ps1
tests/common/: mod.rs
tests/compat/: options.rs  release_readiness.rs
tests/interop/: daemon.rs  rsync_compat.rs  rsync_discovery.rs
tests/security/: remote_peer.rs
tests/stress/: large_file.rs  large_tree.rs
