[workspace]
members = [
    "crates/rsync-cli",
    "crates/rsync-core",
    "crates/rsync-delta",
    "crates/rsync-fs",
    "crates/rsync-filter",
    "crates/rsync-protocol",
    "crates/rsync-transport",
    "crates/rsync-winfs",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
authors = ["rsync-win contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
filetime = "0.2"
thiserror = "2.0"
unicode-normalization = "0.1"
