[package]
name = "rsync-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
filetime.workspace = true
rsync-core = { path = "../rsync-core" }
rsync-filter = { path = "../rsync-filter" }
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[[bench]]
name = "local_sync"
harness = false
